Log truncate file failure in createMappedFileData https://bugs.webkit.org/show_bug.cgi?id=244334 rdar://problem/99140113

Reviewed by David Kilzer.

Do a small refactoring to reduce explicit closure of file.
Use RELEASE_LOG_FAULT in case truncate fails.

* Source/WTF/wtf/FileSystem.cpp:
(WTF::FileSystemImpl::createMappedFileData):

Canonical link: https://commits.webkit.org/253812@main